@@ -242,6 +242,7 @@ struct _PrefsCommon
 	gboolean display_xface;
 	gint line_space;
 	gboolean render_html;
+	gboolean invoke_plugin_on_html;
 	gboolean textview_cursor_visible;
 	gboolean enable_smooth_scroll;
 	gint scroll_step;
