@@ -51,6 +51,7 @@ typedef struct _MessagePage
 	GtkWidget *chkbtn_dispxface;
 
 	GtkWidget *chkbtn_html;
+	GtkWidget *chkbtn_html_plugin;
 	GtkWidget *spinbtn_linespc;
 
 	GtkWidget *chkbtn_smoothscroll;
@@ -83,6 +84,7 @@ void prefs_message_create_widget(PrefsPage *_page, GtkWindow *window,
 
 	GtkWidget *button_edit_disphdr;
 	GtkWidget *chkbtn_html;
+	GtkWidget *chkbtn_html_plugin;
 	GtkWidget *hbox_linespc;
 	GtkWidget *label_linespc;
 	GtkObject *spinbtn_linespc_adj;
@@ -143,6 +145,9 @@ void prefs_message_create_widget(PrefsPage *_page, GtkWindow *window,
 
 	PACK_CHECK_BUTTON(vbox2, chkbtn_html,
 			  _("Render HTML messages as text"));
+
+	PACK_CHECK_BUTTON(vbox2, chkbtn_html_plugin,
+			  _("Render HTML-only messages with plugin if possible"));
 
 	PACK_CHECK_BUTTON(vbox2, chkbtn_attach_desc,
 			  _("Show attachment descriptions (rather than names)"));
@@ -223,6 +228,8 @@ void prefs_message_create_widget(PrefsPage *_page, GtkWindow *window,
 		prefs_common.display_header);
 	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(chkbtn_html),
 		prefs_common.render_html);
+	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(chkbtn_html_plugin),
+		prefs_common.invoke_plugin_on_html);
 	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(chkbtn_smoothscroll),
 		prefs_common.enable_smooth_scroll);
 	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(chkbtn_halfpage),
@@ -239,6 +246,7 @@ void prefs_message_create_widget(PrefsPage *_page, GtkWindow *window,
 	prefs_message->chkbtn_dispxface = chkbtn_dispxface;
 	prefs_message->chkbtn_disphdr = chkbtn_disphdr;
 	prefs_message->chkbtn_html = chkbtn_html;
+	prefs_message->chkbtn_html_plugin = chkbtn_html_plugin;
 	prefs_message->spinbtn_linespc = spinbtn_linespc;
 	prefs_message->chkbtn_smoothscroll = chkbtn_smoothscroll;
 	prefs_message->spinbtn_scrollstep = spinbtn_scrollstep;
@@ -260,6 +268,8 @@ void prefs_message_save(PrefsPage *_page)
 		GTK_TOGGLE_BUTTON(page->chkbtn_disphdr));
 	prefs_common.render_html = gtk_toggle_button_get_active(
 		GTK_TOGGLE_BUTTON(page->chkbtn_html));
+	prefs_common.invoke_plugin_on_html = gtk_toggle_button_get_active(
+		GTK_TOGGLE_BUTTON(page->chkbtn_html_plugin));
 	prefs_common.enable_smooth_scroll = gtk_toggle_button_get_active(
 		GTK_TOGGLE_BUTTON(page->chkbtn_smoothscroll));
 	prefs_common.scroll_halfpage = gtk_toggle_button_get_active(
