@@ -1,3 +1,12 @@
+2006-02-17 [cleroy]	2.0.0cvs60
+
+	* src/messageview.c
+	* src/prefs_common.c
+	* src/prefs_common.h
+	* src/prefs_message.c
+		Add pref to display HTML-only mails with plugin, 
+		if possible (defaulting to FALSE of course).
+
 2006-02-16 [cleroy]	2.0.0cvs59
 
 	* src/main.c
